--- a/src/less/index.less
+++ b/src/less/index.less
@@ -152,19 +152,6 @@ body, #layout, #menu-bar {
     padding: 0;
 }
 
-.scaledSize(@size: @canvasSize) {
-    width: @size * @canvasScale;
-    height: @size * @canvasScale;
-}
-
-.fullSize() {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
 #game-wrapper {
     .scaledSize();
     position: relative;
@@ -173,7 +160,7 @@ body, #layout, #menu-bar {
     border: 2px solid @purple;
     box-shadow: 4px 4px 0 darken(@purple, 5%);
 
-    #game, #canvas-texture, #blurred-game, #blurred-game canvas {
+    #game, #canvas-texture, #blurred-game, #blurred-game canvas, #new-level-curtain {
         .fullSize();
     }
 }
@@ -186,8 +173,6 @@ body, #layout, #menu-bar {
 #canvas-texture {
     z-index: 2;
     pointer-events: none;
-    background-image: url('../../img/canvas_texture.png');
-    background-size: 250px;
     mix-blend-mode: multiply;
     opacity: .6;
 }
@@ -199,11 +184,24 @@ body, #layout, #menu-bar {
 #blurred-game {
     z-index: 3;
     pointer-events: none;
+    filter: blur(20px) saturate(60%) brightness(97%);
+}
 
+#new-level-curtain {
+    z-index: 4;
+    background-color: @purple;
+    background-blend-mode: multiply;
+    pointer-events: none;
+}
+
+#blurred-game, #new-level-curtain {
     opacity: 0;
     transition: opacity 1s;
+}
 
-    filter: blur(20px) saturate(60%) brightness(97%);
+#canvas-texture, #new-level-curtain {
+    background-image: url('../../img/canvas_texture.png');
+    background-size: 250px;
 }
 
 #reticle {
@@ -237,27 +235,12 @@ body, #layout, #menu-bar {
     }
 }
 
-.unselectable {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-
-.white-with-purple-shadow() {
-    color: white;
-    text-shadow: 3px 3px 1px @purple, 0 0 2px @purple;
-}
-
 #game-overlay {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    z-index: 4;
+    z-index: 5;
 
     pointer-events: none;
     opacity: 0;
@@ -323,6 +306,8 @@ body, #layout, #menu-bar {
     }
 }
 
+
+// Stats and sliders
 
 #stats {
     position: relative;
@@ -422,6 +407,9 @@ body, #layout, #menu-bar {
     text-shadow: 1px 1px 1px @purple;
 }
 
+
+// Timer
+
 #time-ring {
     position: absolute;
     left: 50%;
@@ -440,6 +428,8 @@ body, #layout, #menu-bar {
     color: white;
     text-shadow: 0 0 6px #666;
 }
+
+// Tools
 
 #tools {
     padding-right: 30px;
@@ -661,8 +651,14 @@ body, #layout, #menu-bar {
         pointer-events: all;
         opacity: 1;
     }
-    #game, #canvas-texture {
+    #game {
         opacity: 0;
+    }
+}
+.show-curtain {
+    #new-level-curtain {
+        opacity: 1;
+        transition: none;
     }
 }
 
@@ -697,6 +693,24 @@ body, #layout, #menu-bar {
         }
     }
 }
+.mode-failed {
+    #game-overlay {
+        #retry {
+            display: inline-block;
+        }
+    }
+}
+.mode-paused, .mode-failed {
+    #game-overlay {
+        #overlay-title {
+            .white-with-purple-shadow();
+        }
+        #overlay-body {
+            color: @purple;
+            text-shadow: 2px 2px 0 white;
+        }
+    }
+}
 .mode-new-level {
     #game-overlay {
         #overlay-title {
@@ -720,22 +734,81 @@ body, #layout, #menu-bar {
         display: block;
     }
 }
-.mode-complete {
-    #game-overlay {
-        #overlay-title {
-            .white-with-purple-shadow();
+.mode-next-level {
+    #overlay-btns {
+        #next-level {
+            display: block;
         }
-        #overlay-body {
-            color: @purple;
-            text-shadow: 2px 2px 0 white;
-        }
-        #overlay-btns #retry {
+        #quit {
             display: inline-block;
         }
     }
 }
-.mode-transitioning {
+.mode-complete {
+    #overlay-btns {
+        #retry {
+            display: inline-block;
+        }
+    }
+}
+.mode-next-level, .mode-complete {
+    #game-overlay {
+        #overlay-title, #overlay-body {
+            color: white;
+        }
+        #overlay-btns {
+            .overlay-btn {
+                box-shadow: none;
+                border: 2px solid white;
+                width: 7em;
+
+                &:hover {
+                    transform: none;
+                }
+            }
+        }
+    }
+}
+.mode-next-challenge {
     #game {
         cursor: none;
     }
+}
+
+
+// Utility classes
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.scaledSize(@size: @canvasSize) {
+    width: @size * @canvasScale;
+    height: @size * @canvasScale;
+}
+
+.fullSize() {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.white-with-purple-shadow() {
+    color: white;
+    text-shadow: 3px 3px 1px @purple, 0 0 2px @purple;
+}
+
+.preload * {
+    transition: none !important;
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -ms-transition: none !important;
+    -o-transition: none !important;
 }
