--- a/src/less/index.less
+++ b/src/less/index.less
@@ -92,7 +92,9 @@ body, #layout, #menu-bar {
 }
 
 #status {
-    display: none;
+    opacity: 0;
+    transition: opacity 1s;
+
     width: @canvasSize * @canvasScale;
     font-size: 26px;
     letter-spacing: 1px;
@@ -160,7 +162,7 @@ body, #layout, #menu-bar {
     border: 2px solid @purple;
     box-shadow: 4px 4px 0 darken(@purple, 5%);
 
-    #game, #canvas-texture, #blurred-game, #blurred-game canvas, #new-level-curtain {
+    #game, #canvas-texture, #blurred-game, #blurred-game canvas {
         .fullSize();
     }
 }
@@ -185,18 +187,27 @@ body, #layout, #menu-bar {
     z-index: 3;
     pointer-events: none;
     filter: blur(20px) saturate(60%) brightness(97%);
+
+    opacity: 0;
+    transition: opacity 1s;
 }
 
 #new-level-curtain {
     z-index: 4;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    height: 0;
+
     background-color: @purple;
     background-blend-mode: multiply;
     pointer-events: none;
-}
 
-#blurred-game, #new-level-curtain {
-    opacity: 0;
-    transition: opacity 1s;
+    transition: height 2s;
+    transition-timing-function: linear;
 }
 
 #canvas-texture, #new-level-curtain {
@@ -244,7 +255,7 @@ body, #layout, #menu-bar {
 
     pointer-events: none;
     opacity: 0;
-    transition: opacity .75s;
+    transition: opacity .6s;
 
     #overlay-title {
         width: 450px;
@@ -632,12 +643,9 @@ body, #layout, #menu-bar {
 // Modes & display modifiers
 
 .show-game {
-    #layout {
+    #layout, #status {
         pointer-events: all;
         opacity: 1;
-    }
-    #status {
-        display: block;
     }
 }
 .show-overlay {
@@ -651,13 +659,14 @@ body, #layout, #menu-bar {
         pointer-events: all;
         opacity: 1;
     }
-    #game {
+    #game, #canvas-texture {
         opacity: 0;
     }
 }
 .show-curtain {
     #new-level-curtain {
         opacity: 1;
+        height: 100%;
         transition: none;
     }
 }
@@ -725,6 +734,9 @@ body, #layout, #menu-bar {
             display: inline-block;
         }
     }
+    #new-level-curtain {
+        z-index: 6;
+    }
 }
 .mode-playing {
     #game {
@@ -735,12 +747,14 @@ body, #layout, #menu-bar {
     }
 }
 .mode-next-level {
-    #overlay-btns {
-        #next-level {
-            display: block;
-        }
-        #quit {
-            display: inline-block;
+    #game-overlay {
+        #overlay-btns {
+            #next-level {
+                display: block;
+            }
+            #quit {
+                display: inline-block;
+            }
         }
     }
 }
