--- a/src/less/index.less
+++ b/src/less/index.less
@@ -253,6 +253,8 @@ body, #layout, #menu-bar {
     transform: translate(-50%,-50%);
     z-index: 5;
 
+    text-align: center;
+
     pointer-events: none;
     opacity: 0;
     transition: opacity .6s;
@@ -274,17 +276,18 @@ body, #layout, #menu-bar {
         font-size: 2.1em;
         word-spacing: 4px;
         letter-spacing: 1px;
+        text-align: left;
 
         margin-left: auto;
         margin-right: auto;
-        margin-top: .3em;
+        margin-top: .5em;
 
         z-index: 4;
         width: 95%;
     }
 
     #overlay-btns {
-        text-align: center;
+        display: inline-block;
         margin-top: 2.5em;
 
         .overlay-btn {
@@ -292,6 +295,7 @@ body, #layout, #menu-bar {
 
             margin: .4em auto .8em auto;
             padding: 0.2em 1.1em;
+            line-height: 1.2em;
 
             color: white;
             background-color: @purple;
@@ -679,7 +683,7 @@ body, #layout, #menu-bar {
             }
 
             &.disabled::after {
-                content: '(not allowed)';
+                content: '(not allowed here)';
                 color: red;
 
                 font-style: italic;
@@ -747,7 +751,7 @@ body, #layout, #menu-bar {
     }
 
     #game-overlay {
-        transform: translate(-50%, -140px); // prevents jitter on button animation; keep in sync with button dimensions
+        transform: translate(-50%, -148px); // prevents jitter on button animation; keep in sync with button dimensions
 
         #overlay-title {
             .white-with-purple-shadow();
@@ -756,15 +760,12 @@ body, #layout, #menu-bar {
             display: none;
         }
         #overlay-btns {
-            margin-top: 1.75em;
-            .overlay-btn {
-                width: 7em;
-            }
+            margin-top: 2em;
             #resume, #quit {
-                display: inline-block; // prevent margin collapsing by alternating inline-block & block
+                display: block;
             }
             #retry {
-                display: block;
+                display: inline-block; // prevent margin collapsing by alternating inline-block & block
             }
         }
     }
@@ -825,10 +826,16 @@ body, #layout, #menu-bar {
         }
     }
 }
-.mode-complete {
-    #overlay-btns {
-        #retry {
-            display: inline-block;
+.mode-complete, .mode-failed {
+    #game-overlay {
+        transform: translate(-50%, -183px);
+        #overlay-btns {
+            #quit {
+                display: block;
+            }
+            #retry {
+                display: inline-block;
+            }
         }
     }
 }
@@ -841,7 +848,6 @@ body, #layout, #menu-bar {
             .overlay-btn {
                 box-shadow: none;
                 border: 2px solid white;
-                width: 7em;
 
                 &:hover {
                     transform: none;
