--- a/src/less/index.less
+++ b/src/less/index.less
@@ -604,22 +604,6 @@ body, #layout, #menu-bar {
 .tippy-box {
     font-family: @kidpixFont;
 
-    &[data-theme~='gray'] {
-        background-color: rgba(90, 90, 90, 0.75);
-        font-family: @kidpixFont;
-        font-weight: 600;
-        font-size: 14px;
-        color: #eee;
-        text-shadow: 1px 1px 3px #555;
-
-        &[data-placement^='bottom']>.tippy-arrow {
-            &::before {
-                border-bottom-width: 7px;
-                border-bottom-color: rgba(90, 90, 90, 0.75);
-            }
-        }
-    }
-
     &[data-theme~='purple'] {
         background-color: @tooltipBg;
         backdrop-filter: blur(2px);
@@ -649,7 +633,12 @@ body, #layout, #menu-bar {
 
         color: @purple;
         background-color: white;
-        filter: drop-shadow(2px 2px 0 @purple) drop-shadow(-1px -1px 0 @purple) drop-shadow(1px -2px 0 @purple) drop-shadow(-1px 1px 0 @purple);
+        filter:
+            drop-shadow(2px 2px 0 @purple)
+            drop-shadow(-1px -1px 0 @purple)
+            drop-shadow(1px -2px 0 @purple)
+            drop-shadow(-1px 1px 0 @purple)
+            drop-shadow(2px 2px 3px fade(darken(@purple, 10%), 40%));
 
         padding: 1px 3px;
         border-radius: @borderRadius;
