--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,5 +1,5 @@
-@bgColorLight: #b59cc4;
-@bgColorDark: #ac8fbc;
+@bgColorLight: lighten(#b59cc4, 12%);
+@bgColorDark: darken(#ac8fbc, 10%);
 @purple: purple;
 @tooltipBg: rgba(61, 0, 81, 0.74);
 
@@ -40,9 +40,13 @@ body {
 
     opacity: 0;
     transition: opacity 1.5s;
+    pointer-events: none;
 }
 #menu-bar {
     position: absolute;
+
+    opacity: 0;
+    transition: opacity 1s;
 
     display: flex;
     justify-content: space-between;
@@ -105,9 +109,6 @@ body, #layout, #menu-bar {
 }
 
 #status {
-    opacity: 0;
-    transition: opacity 1s;
-
     width: @canvasSize * @canvasScale;
     font-size: 26px;
     letter-spacing: 1px;
@@ -790,7 +791,7 @@ body, #layout, #menu-bar {
 // Modes & display modifiers
 
 .show-game {
-    #layout, #status {
+    #layout, #menu-bar {
         pointer-events: all;
         opacity: 1;
     }
@@ -815,6 +816,12 @@ body, #layout, #menu-bar {
         opacity: 1;
         height: 100%;
         transition: none;
+    }
+}
+.show-splash {
+    #splash-screen {
+        opacity: 1;
+        pointer-events: all;
     }
 }
 
@@ -938,6 +945,61 @@ body, #layout, #menu-bar {
 }
 
 
+// Splash screen
+
+#splash-screen {
+    .fullSize();
+    z-index: 10;
+
+    background: radial-gradient(@bgColorLight, @bgColorDark);
+
+    opacity: 0;
+    transition: opacity 1s;
+    pointer-events: none;
+}
+
+#splash-wrapper {
+    .centered();
+
+    text-align: center;
+    width: 100%;
+
+    img {
+        width: 60%;
+        max-width: 820px;
+        box-shadow: 6px 6px 0 @purple, -6px -6px 0 white;
+    }
+    #btn-begin {
+        display: block;
+
+        height: 85px;
+        width: 157px;
+
+        padding-left: 1em;
+        margin: 2em auto 0 auto;
+        border: none;
+
+        color: white;
+        font-family: 'Slackey';
+        font-size: 1.3em;
+        line-height: 1em;
+
+        background: url('../../img/paint_splat.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+
+        text-shadow: 2px 2px 0 @purple;
+
+        cursor: pointer;
+
+        transition: all .1s;
+        &:hover {
+            filter: brightness(1.2);
+            transform: scale(1.1);
+        }
+    }
+}
+
 // Utility classes
 
 .unselectable {
@@ -960,6 +1022,13 @@ body, #layout, #menu-bar {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.centered() {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .white-with-purple-shadow() {
