--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,4 +1,4 @@
-@bgColorLight: lighten(#b59cc4, 12%);
+@bgColorLight: lighten(#b59cc4, 13%);
 @bgColorDark: darken(#ac8fbc, 10%);
 @purple: purple;
 @tooltipBg: rgba(61, 0, 81, 0.74);
@@ -965,15 +965,25 @@ body, #layout, #menu-bar {
     width: 100%;
 
     img {
-        width: 60%;
-        max-width: 820px;
+        width: 70%;
+        max-width: 900px;
         box-shadow: 6px 6px 0 @purple, -6px -6px 0 white;
     }
+
+    #disclaimer {
+        color: white;
+        opacity: .65;
+        font-size: 1.25em;
+        font-weight: 100;
+        margin-top: 8px;
+        letter-spacing: .5px;
+    }
+
     #btn-begin {
         display: block;
 
-        height: 85px;
-        width: 157px;
+        height: 95px;
+        width: 173px;
 
         padding-left: 1em;
         margin: 2em auto 0 auto;
@@ -981,7 +991,7 @@ body, #layout, #menu-bar {
 
         color: white;
         font-family: 'Slackey';
-        font-size: 1.3em;
+        font-size: 1.6em;
         line-height: 1em;
 
         background: url('../../img/paint_splat.png');
